tests/NormalTests/paczka1/small_fuzzy/46485320.err
Error in line 8: S916 A985 17,8
Error in line 4: P0h68n4 S955 17,3
